<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="@string/preference_quantity_title">
  	<ListPreference android:dialogTitle="@string/preference_quantity_dialog_title"
  			android:summary="@string/preference_quantity_sumary"
  			android:title="@string/preference_quantity_title"
  			android:entries="@array/preferences_list_ask"
  			android:entryValues="@array/preferences_list_ask"
  			android:key="ask_quantity"
  			android:defaultValue="40">
  	</ListPreference>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/preference_language_title">
  	<ListPreference android:dialogTitle="@string/preference_language_dialog_title"
	  	android:title="@string/preference_language_title"
	  	android:summary="@string/preference_language_sumary"
	  	android:entries="@array/lenguajes"
	  	android:entryValues="@array/lenguajes_value"
	  	android:key="lenguaje_select">
  	</ListPreference>
  </PreferenceCategory>
  	<PreferenceCategory android:title="@string/preference_type_title">
  	<ListPreference android:dialogTitle="@string/preference_type_dialog_title"
	  	android:title="@string/preference_type_title"
	  	android:summary="@string/preference_type_sumary"
	  	android:entries="@array/examen_type"
	  	android:entryValues="@array/examen_type_value"
	  	android:key="test_type">
  	</ListPreference>
  </PreferenceCategory>
    
</PreferenceScreen>
